# Social-Media-Sentiment-Analysis-on-Cryptocurrencies

./: README.md  pyproject.toml
src/analysis/qloraAnalysis/: processDataset.py
src/analysis/sentiment/: AggrSentOverTime.py  allCoinSentGraph.py  nonNormalisedAggSent.py  tmp.py
src/analysis/tools/: oldestPost.py  postsPerYear.py  tmp.py  wordTest.py
src/analysis/topicExtraction/: graphsToSVG.py  ldaProcessing.py  plotLda.py  topicGridSearch.py
src/dataCollection/: toParquet.py  top50.csv  top50.py
src/dataCollection/Mastodon/: mastodonScraper.py  postCount.py
src/trainingModel/: bnb_4bit_training_LoRA.ipynb  bnb_4bit_training_ReFT.ipynb
src/trainingModel/wandb/run-20240426_134602-j694knam/: run-j694knam.wandb
src/trainingModel/wandb/run-20240426_134602-j694knam/files/: config.yaml  requirements.txt  wandb-metadata.json
src/trainingModel/wandb/run-20240426_134859-gefl4zio/: run-gefl4zio.wandb
src/trainingModel/wandb/run-20240426_134859-gefl4zio/files/: config.yaml  wandb-metadata.json
src/trainingModel/wandb/run-20240426_135349-7cqsytfw/: run-7cqsytfw.wandb
src/trainingModel/wandb/run-20240426_140323-z3jq5krd/: run-z3jq5krd.wandb
src/trainingModel/wandb/run-20240426_141008-3fvcz80e/: run-3fvcz80e.wandb
src/trainingModel/wandb/run-20240426_150654-4stqaz5f/: run-4stqaz5f.wandb
src/trainingModel/wandb/run-20240501_175740-n1m3njv0/: run-n1m3njv0.wandb
src/trainingModel/wandb/run-20240501_194810-z9xy0cqr/: run-z9xy0cqr.wandb
src/trainingModel/wandb/run-20240503_181528-ykh3tgtv/: run-ykh3tgtv.wandb
(+21 files in other folders)
