[tool.poetry]
name = "finalyearproject"
version = "0.1.0"
description = "Dependencies for my web scrapers"
authors = ["D-NENTWIG <david.nentwig.21@ucl.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
httpx = "^0.24.1"
asyncio = "^3.4.3"
logging = "^0.4.9.6"
requests = "^2.31.0"
htmllaundry = "^2.2"
aiohttp = "^3.8.5"
beautifulsoup4 = "^4.12.3"
matplotlib = "^3.8.3"
plotly = "^5.19.0"
numpy = "^1.26.4"
scikit-learn = "^1.4.1.post1"
nltk = "^3.8.1"
langdetect = "^1.0.9"
vadersentiment = "^3.3.2"
yfinance = "^0.2.37"
seaborn = "^0.13.2"
emoji = "^2.11.0"
bleach = "^6.1.0"
kaleido = "0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
